# nl-service-metadata-generator

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  generate_md.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-and-publish-image.yml  publish-pypi.yml  python-test.yml
example_json/: atom_niet_inspire.json  cbs_gebiedsindelingen_atom.json  cbs_gebiedsindelingen_wfs.json  cbs_gebiedsindelingen_wms.json  constants.json  contact.json  dkk_v4_wfs.json  dkk_v4_wms.json  dkk_v4_wmts.json  extractor_output.json  extractor_output_atom.json  extractor_output_atom_inspire.json  extractor_output_inspire.json  hvd.json  inspire.json  invasieveexoten_wfs.json  mosselzaad.json  oaf.json  oat.json  protectedsites_cdda_harmonized.json  regular.json
json/: codelists.json
metadata_generator/: cli.py
nl_service_metadata_generator/: cli.py  codelist_lookup.py  constants.py  enums.py  metadata_generator.py  util.py
output/: 0bb7e0e1-c8c0-4fc0-b499-0a9ab2449b08_ATOM.xml  0bb7e0e1-c8c0-4fc0-b499-0a9ab2449b08_WFS.xml  0bb7e0e1-c8c0-4fc0-b499-0a9ab2449b08_WMS.xml  7165bb1f-fea6-4f28-b1d2-a2a92a11ea2f_ATOM.xml  7165bb1f-fea6-4f28-b1d2-a2a92a11ea2f_WFS.xml  7165bb1f-fea6-4f28-b1d2-a2a92a11ea2f_WMS.xml  jinja_output.xml  jinja_output_extractor.xml  jinja_output_extractor_atom.xml  jinja_output_extractor_inspire.xml
src/nl_service_metadata_generator/: cli.py  codelist_lookup.py  constants.py  hvd_categories.py  metadata_generator.py  (+1 more)
templates/: iso19119_nl_profile_2.0_regular.mustache  iso19119_nl_profile_2.0_template_inspire_harmonized.mustache
(+58 files in other folders)
