[project]
name = "nl-service-metadata-generator"
description = "CLI applicatie voor het genereren van service metadata die voldoet aan het Nederlands metadata profiel op ISO 19119 voor services versie 2.1.0 - https://docs.geostandaarden.nl/md/mdprofiel-iso19119/"
keywords = ["ngr", "pdok", "iso19119", "nl-metadata-profiel", "metadata", "cli" ]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
]
version = "0.1"
readme = { file = "./README.md", content-type = "text/markdown" }
dependencies = [
    "Click ~= 8.1",
    "Jinja2 ~= 3.1",
    "lxml ~= 4.6",
    "jsonschema ~= 4.12"
]
requires-python = ">=3.10.6"

[project.optional-dependencies]
dev = ["black", "autoflake", "isort"]

[project.scripts]
nl-service-metadata-generator = "nl_service_metadata_generator.cli:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["nl_service_metadata_generator*"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]
